Footer icons fix on mobile (< 4.7in)

--- a/assets/common/css/footer.css
+++ b/assets/common/css/footer.css
@@ -8,13 +8,13 @@
 }
 
 .iconFacebook {
-    padding-right: 5px;
     text-decoration: none !important;
     color: white;
 }
 
 .iconFacebook img {
     content: url("../../common/images/navbar/facebook_white_icon.png");
+    width: 100px;
 }
 
 .iconInstagram img {
@@ -39,17 +39,9 @@
     text-decoration: none !important;
 }
 
-
-/* @media (max-width:1024px) {
-    .partnerships a img {
-        max-width: 12%;
-    }
-} */
-
 .partnerships a img {
     padding-right: 2px;
-    width: 40px;
-    /* height: 50px; */
+    width: 35px;
 }
 
 .partnerships a img:hover {
